--- a/lab-python-flow-control.ipynb
+++ b/lab-python-flow-control.ipynb
@@ -37,6 +37,88 @@
     "\n",
     "3. Instead of updating the inventory by subtracting 1 from the quantity of each product, only do it for  the products that were ordered (those in \"customer_orders\")."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "for product in products:\n",
+    "    quantity = int(input(f\"Enter the quantity of {product}s available: \"))\n",
+    "    inventory[product] = quantity\n",
+    "    print(\"Inventory:\")\n",
+    "print(inventory)\n",
+    "\n",
+    "for _ in range(3):\n",
+    "    product_name = input(\"Enter the name of a product that a customer wants to order: \")\n",
+    "    customer_orders.add(product_name)\n",
+    "    # Print the set of customer orders\n",
+    "print(\"Customer Orders:\", customer_orders)\n",
+    "\n",
+    "for product in inventory:\n",
+    "    inventory[product] -= 1\n",
+    "\n",
+    "\n",
+    "print(\"Updated Inventory:\")\n",
+    "for product in inventory:\n",
+    "    print(f\"{product}: {inventory[product]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Create an empty set called customer_orders\n",
+    "customer_orders = set()\n",
+    "\n",
+    "# Continue the loop until the user does not want to add another product\n",
+    "while True:\n",
+    "    # Prompt the user to input the name of a product that a customer wants to order\n",
+    "    product_name = input(\"Enter the name of a product that a customer wants to order: \")\n",
+    "    \n",
+    "    # Add the product name to the customer_orders set\n",
+    "    customer_orders.add(product_name)\n",
+    "    \n",
+    "    # Ask the user if they want to add another product\n",
+    "    choice = input(\"Do you want to add another product? (yes/no): \").lower()\n",
+    "    if choice != 'yes':\n",
+    "        break\n",
+    "\n",
+    "# Print the set of customer orders\n",
+    "print(\"Customer Orders:\", customer_orders)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Update the inventory by subtracting 1 from the quantity of each product that was ordered\n",
+    "for product in customer_orders:\n",
+    "    if product in inventory:\n",
+    "        inventory[product] -= 1\n",
+    "\n",
+    "# Print the updated inventory\n",
+    "print(\"Updated Inventory:\")\n",
+    "for product, quantity in inventory.items():\n",
+    "    print(f\"{product}: {quantity}\")"
+   ]
   }
  ],
  "metadata": {
